--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -31,7 +31,7 @@
             android:layout_marginTop="30dp"
             android:text="@string/settings_vitese_defilement"
             android:textColor="@color/black"
-            android:textSize="20sp" />
+            android:textSize="@dimen/editText_size" />
 
         <com.google.android.material.slider.Slider
             android:id="@+id/settings_question_speed_sl"
@@ -53,7 +53,7 @@
             android:layout_margin="@dimen/global_margin"
             android:text="@string/settings_add_question"
             android:textColor="@color/black"
-            android:textSize="20sp" />
+            android:textSize="@dimen/editText_size" />
 
         <LinearLayout
             android:id="@+id/settings_add_question_layout"
