--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -33,9 +33,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/global_margin"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/game_score_margin"
         android:paddingVertical="@dimen/global_margin"
-        android:text="0"
+        android:text="@string/game_0_score"
         android:textSize="@dimen/game_score_size"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,7 +48,7 @@
         android:layout_marginHorizontal="@dimen/global_margin"
         android:paddingVertical="@dimen/global_margin"
         android:rotation="180"
-        android:text="0"
+        android:text="@string/game_0_score"
         android:textSize="@dimen/game_score_size"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,7 +71,7 @@
         android:layout_marginHorizontal="@dimen/global_margin"
         android:paddingVertical="@dimen/global_margin"
         android:rotation="180"
-        android:textSize="30sp"
+        android:textSize="@dimen/game_question_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/game_joueur2_bt" />
@@ -82,7 +82,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/global_margin"
         android:paddingVertical="@dimen/global_margin"
-        android:textSize="30sp"
+        android:textSize="@dimen/game_question_title"
         app:layout_constraintBottom_toTopOf="@+id/game_joueur1_bt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
